--- a/SpringStudy/pom.xml
+++ b/SpringStudy/pom.xml
@@ -82,6 +82,12 @@
 		    <version>5.1.40</version>
 		</dependency>
 				
-
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		    <version>4.3.4.RELEASE</version>
+		</dependency>
+				
 	</dependencies>	
 </project>
